set up build command; set up communicating data between godot app and shell page

--- a/src/app_shell/app-shell.html
+++ b/src/app_shell/app-shell.html
@@ -4,20 +4,20 @@
 <head>
   <title>GDShaderToy</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./app.css" />
+  <link rel="stylesheet" href="./src/app_shell//app-shell.css" />
   <!-- Dependency scripts -->
   <script src="./$GODOT_URL"></script>
-  <script src="./godot-app-buffer.js"></script>
   <script>
     // Define engine globally
-    const ENGINE = new Engine($GODOT_CONFIG);
+    window.ENGINE = new Engine($GODOT_CONFIG);
   </script>
   <!-- Main logic script -->
-  <script defer src="./app-shell.js"></script>
+  <script defer src="./src/app_shell/app-shell.js"></script>
 </head>
 
 <body class="no-mar-pad">
   <canvas id="canvas" width="300" height="300"></canvas>
+  <p></p>
 </body>
 
 </html>
