finished the app! TODO make a README and LICENSE and publish to github

--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
 <head>
   <title>GDShaderToy</title>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Godot app script -->
   <script src="./index.js"></script>
   <!-- App shell page script -->
   <script defer src="./src/app_shell/app-shell.js"></script>
   <!-- Define engine globally (this must be part of the HTML template) -->
-  <script>window.ENGINE = new Engine({"args":[],"canvasResizePolicy":0,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":8400,"index.wasm":35376909},"focusCanvas":false,"gdextensionLibs":[]});</script>
+  <script>window.ENGINE = new Engine({"args":[],"canvasResizePolicy":0,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":8752,"index.wasm":35376909},"focusCanvas":false,"gdextensionLibs":[]});</script>
   <!-- Main stylesheet -->
   <link rel="stylesheet" href="./src/app_shell//app-shell.css" />
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <!-- Code editor web component -->
-  <script src="https://cdn.jsdelivr.net/gh/MarketingPipeline/Ace-Editor-Web-Component@1.0.2/dist/ace-editor-wc.min.js" defer></script> 
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <!-- Ace code editor web component -->
+  <script src="https://cdn.jsdelivr.net/gh/MarketingPipeline/Ace-Editor-Web-Component@1.0.2/dist/ace-editor-wc.min.js" defer></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/MarketingPipeline/Ace-Editor-Web-Component@v1.0.2/dist/ace-editor-wc.min.css">
 
 </head>
@@ -25,18 +27,23 @@
 <body>
   <header>
     <h1>GDShader Playground</h1>
-    <p>An online editor for <a href="https://godotengine.org/" target="_blank" rel="noopener noreferrer">Godot</a> post-processing shaders</p>
+    <p>An online editor for <a href="https://godotengine.org/" target="_blank" rel="noopener noreferrer">Godot</a>
+      post-processing shaders</p>
   </header>
   <main>
     <div>
       <canvas id="canvas" width="300" height="300"></canvas>
-      <button>Update</button>
+      <button id="compile">Compile</button>
     </div>
-    <ace-editor language="glsl">void fragment() {
+    <div>
+      <p id="error" data-is-error="false"></p>
+      <ace-editor language="glsl">shader_type canvas_item;
+
+void fragment() {
   COLOR = texture(TEXTURE, UV); // Read from texture
   COLOR.b = 1.0; // Set blue channel to 1.0
-}
-</ace-editor>
+}</ace-editor>
+    </div>
   </main>
 </body>
 
