--- a/src/app_shell/app-shell.html
+++ b/src/app_shell/app-shell.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>GDShaderToy</title>
+  <title>GDShader Playground</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Godot app script -->
